test/compilable/imports/test313d.d
module imports.test313d;

auto baz() { return 3; }
