test/fail_compilation/ice13259.d
auto dg = delegate {};
static assert(0);